--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install Wine for multi-platform builds
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wine
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
