--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "electron:dev": "electron .",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "electron:build": "vite build && electron-builder --win --x64",
+    "electron:build64": "electron-builder --win --x64",
+    "electron:build32": "electron-builder --win --ia32",
     "lint": "eslint .",
     "preview": "vite preview"
   },
