--- a/package.json
+++ b/package.json
@@ -112,5 +112,15 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^6.3.3"
+  },
+  "resolutions": {
+    "glob": "^10.3.10",
+    "inflight": "^2.0.0",
+    "boolean": "^4.0.0"
+  },
+  "overrides": {
+    "glob": "^10.3.10",
+    "inflight": "^2.0.0",
+    "boolean": "^4.0.0"
   }
 }
